--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="filter_image_desc">Picture from camera</string>
+    <string name="title_activity_camera">Camera</string>
+    <string name="title_activity_filter">Filter</string>
 </resources>
